Add safe upgrades from 1.6.x and 1.7